@@ -1,6 +1,7 @@
 #pragma once
 
 #include <math.h>
+#include "vector.h"
 
 #if _MSC_VER < 1800
 __forceinline float exp2f(const float e)
@@ -20,3 +21,4 @@ __forceinline float sqrf(const float x)
 // Returns true if there are real solutions, false otherwise.
 bool SolveQuadraticEq(const float a, const float b, const float c, float& sol1, float& sol2);
 
+Vertex3Ds SolveCubicEq(Vertex4D Coefficient);
