@@ -1595,9 +1595,9 @@ void PinInput::ProcessKeys(/*const U32 curr_sim_msec,*/ int curr_time_msec) // l
                g_pplayer->UpdateBackdropSettings(false);
            if (m_keyPressedState[eRightFlipperKey])
                g_pplayer->UpdateBackdropSettings(true);
-           if (m_keyPressedState[eLeftTiltKey] && g_pplayer)
+           if (m_keyPressedState[eLeftTiltKey])
                g_pplayer->m_ptable->m_BG_rotation[g_pplayer->m_ptable->m_BG_current_set] -= 1.0f;
-           if (m_keyPressedState[eRightTiltKey] && g_pplayer)
+           if (m_keyPressedState[eRightTiltKey])
                g_pplayer->m_ptable->m_BG_rotation[g_pplayer->m_ptable->m_BG_current_set] += 1.0f;
          }
 
@@ -1610,21 +1610,21 @@ void PinInput::ProcessKeys(/*const U32 curr_sim_msec,*/ int curr_time_msec) // l
    {
       if (input->dwSequence == APP_MOUSE)
       {
-          if(g_pplayer && g_pplayer->m_fThrowBalls)
+         if(g_pplayer->m_fThrowBalls)
          {
              ProcessThrowBalls(input);
          }
          else
          {
-            if (input->dwOfs == 1 && m_joylflipkey==25 && g_pplayer)
+            if (input->dwOfs == 1 && m_joylflipkey==25)
             {
                FireKeyEvent((input->dwData & 0x80) ? DISPID_GameEvents_KeyDown : DISPID_GameEvents_KeyUp, (DWORD)g_pplayer->m_rgKeys[eLeftFlipperKey]);
             }
-            if(input->dwOfs == 2 && m_joyrflipkey == 26 && g_pplayer)
+            if(input->dwOfs == 2 && m_joyrflipkey == 26)
             {
                FireKeyEvent((input->dwData & 0x80) ? DISPID_GameEvents_KeyDown : DISPID_GameEvents_KeyUp, (DWORD)g_pplayer->m_rgKeys[eRightFlipperKey]);
             }
-            if(input->dwOfs == 3 && m_joyplungerkey == 27 && g_pplayer)
+            if(input->dwOfs == 3 && m_joyplungerkey == 27)
             {
                FireKeyEvent((input->dwData & 0x80) ? DISPID_GameEvents_KeyDown : DISPID_GameEvents_KeyUp, (DWORD)g_pplayer->m_rgKeys[ePlungerKey]);
             }
